# Metaverse_blockchain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.frontend  Dockerfile.quantum  Dockerfile.web2  LICENSE  README.md  SECURITY.md  docker-compose.yml  stress_test.rs  test_all.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
monitoring/: prometheus.yml
scripts/: deploy_l3_sidechain.rs
src/: lib.rs  main.rs
src/blockchain/: block.rs  core.rs  flux.rs  frc.rs  mod.rs  sidechain.rs  types.rs  zk_storage.rs
src/cli/: mod.rs
src/crypto/: mod.rs  tally.rs  tally_test.rs
src/economics/: models.rs
src/governance/: ai_governance.rs  mod.rs
src/hubble/: mod.rs  search.rs  state.rs  transitions.rs  verification.rs
src/identity/: mod.rs  zk_identity.rs
src/layers/: foa_contract.rs  l0_tally.rs  l1_orchestration.rs  l2_mainnet.rs  l2_sidenet.rs  l3_private.rs  layer3.rs  mod.rs  xor_storage.rs
src/math/: ai_decision.rs  entropy.rs  flux.rs  mod.rs  physics.rs  precision.rs  quantum_entropy.rs  quantum_retrogate.rs  quantum_retrogate_test.rs  quantum_state.rs
src/network/: mod.rs  p2p.rs  quantum_network.rs  rpc.rs
src/orchestration/: mod.rs  tally_test.rs
src/recovery/: mod.rs
src/security/: mod.rs  quantum_crypto.rs  quantum_resistant.rs  quantum_security.rs  tests.rs
src/storage/: merkle.rs  mod.rs  quantum.rs  quantum_store.rs
src/tests/: mod.rs
src/vm/: compiler.rs  executor.rs  mod.rs  state.rs
tests/: core_test.rs  integration_tests.rs  simplified_test.rs
(+9 files in other folders)
