[package]
name = "quantum_metaverse"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Metaverse Team"]
description = "A mathematically rigorous, multi-language blockchain metaverse with quantum-resistant architecture"

[dependencies]
nalgebra = "0.32.3"
num-complex = "0.4.4"
rug = "1.22.0"
pqcrypto-traits = "0.3.4"
pqcrypto-ntru = "0.5.8"
pqcrypto-dilithium = "0.4.3"
# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Cryptography
rand = "0.8"
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
curve25519-dalek = "4.1"

# Network
tokio-tungstenite = "0.20"
tungstenite = "0.20"
websocket = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde_arrays = "0.1"
serde_bytes = "0.11"
base64 = "0.21"

# Storage
rocksdb = "0.21"

# Math and AI
ndarray = "0.15"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
hex = "0.4"

# Math
num = "0.4"
num-traits = "0.2"

num-bigint = "0.4"
num-rational = "0.4"
num-integer = "0.1"
num-iter = "0.1"
num-derive = "0.3"
